--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "framer-motion": "^8.0.2",
+    "motion": "^10.15.3",
     "nodemailer": "^6.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,6 +17,7 @@
     "react-intersection-observer": "^9.4.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "sass": "^1.57.1",
     "sunrise-sunset-api": "^0.2.1",
     "web-vitals": "^2.1.4"
   },
